--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,11 @@ body {
   background-color: rgba(222, 218, 218, 0.052);
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
 .main__form {
   width: 100%;
   max-width: 800px;
@@ -53,7 +58,6 @@ body {
   object-fit: cover;
 }
 
-
 .section__contenedor {
   display: flex;
   justify-content: center;
@@ -69,10 +73,26 @@ body {
 .btn__btn {
   border-radius: 10px;
   background-color: #333;
+  cursor: pointer;
   width: 380px;
   height: 30px;
   color: antiquewhite;
   font-size: 15px;
   font-weight: 800;
   box-shadow: 0px 5px 10px rgba(5, 5, 5, 5);
+}
+.footer__content {
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.icon {
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+  font-size: 35px;
 }
