--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,6 @@ a {
 }
 
 .main__form {
-  width: 100%;
   max-width: 800px;
   margin: 0 auto;
   padding: 20px;
@@ -30,6 +29,7 @@ a {
 
 .section__form {
   display: grid;
+  align-content: center;
   grid-template-columns: 1fr 1fr;
 }
 
@@ -113,19 +113,4 @@ a {
 .label__description {
   margin-bottom: 10px;
   font-weight: 600;
-}
-
-@media only screen and (min-width: 320px) and (max-width: 768px) {
-  .section__form {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .main__form {
-    width: 250px;
-  }
-
-  .btn__btn {
-    width: 100%;
-  }
 }
