--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@ a {
   max-width: 800px;
   margin: 0 auto;
   padding: 20px;
+  height: 100vh;
 }
 
 .videolist {
@@ -31,6 +32,7 @@ a {
   display: grid;
   align-content: center;
   grid-template-columns: 1fr 1fr;
+  height: 100%;
 }
 
 .section__welcome {
@@ -49,6 +51,7 @@ a {
 
 .section__video {
   width: 100%;
+  height: 100%;
   overflow: hidden;
   box-shadow: 0px 15px 10px rgba(5, 0, 0, 10);
 }
@@ -75,7 +78,6 @@ a {
   border-radius: 10px;
   background-color: #333;
   cursor: pointer;
-  width: 380px;
   height: 30px;
   color: antiquewhite;
   font-size: 15px;
@@ -113,4 +115,14 @@ a {
 .label__description {
   margin-bottom: 10px;
   font-weight: 600;
+}
+
+@media (max-width: 321px) {
+  .section__video {
+    display: none;
+  }
+
+  .section__contenedor {
+    width: 261px;
+  }
 }
